app/(tourist)/regist/page.module.scss
.form,
.complete {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  height: 100%;
  min-height: 500px;
  max-height: 590px;

  .inputDiv,
  .success {
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: center;
    width: 330px;
    height: 36vh;
    min-height: 220px;
    max-height: 310px;
    padding: 28px 0 85px;
    .descript {
      padding: 0 4px;

      font-size: 14px;
      text-align: initial;
      word-wrap: normal;
    }
  }

  button,
  a {
    gap: 10px;

    margin-top: 36px;

    font-weight: 600;
  }
}

.mailInput {
  position: relative;
}

.inputDiv.passInput {
  gap: 0px;
}

.success {
  font-weight: 600;
  font-size: 20px;
}

.veriCodeInput {
  position: relative;
  input {
    width: 86px;
    padding: 1px 180px 1px 48px;
  }
}

.defaultHead {
  position: absolute;
  top: 67px;
  left: 0px;
  left: 20px;

  font-size: 1.25rem;
  line-height: 1.5rem;
  letter-spacing: 0.25rem;
}

